# starfieldsaver

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  StarfieldQuicksaveBackup.ps1  config_loader.py  file_watchers.py  globals.py  main.py  process_monitor.py  pycompiler.bat  pyproject.toml  quicksave-backup.ps1  quicksave_utility.py  ruff.toml  save_cleaner.py  save_renumberer.py  sound_player.py  starfield_quicksave.bat  starfield_quicksave.py  starfield_quicksave.spec  starfield_quicksave_debug.bat  starfield_saver.bat  starfield_saver.py  starfield_saver.spec  starfieldsaver.code-workspace  starfieldsaver.spec  version.json  version_updater.py
.github/workflows/: docs.yml
.pdoc/tokyo-night/: syntax-highlighting.css  theme.css
src/starfield_saver/: config_loader.py  main.py  process_monitor.py  quicksave_utility.py  save_cleaner.py  sound_player.py  version.py  version_updater.py
src/starfield_saver/tools/: renumber_saves.py
src/starfieldsaver/: config_loader.py  main.py  process_monitor.py  quicksave_utility.py  quicksaver.py  save_cleaner.py
tools/: renumber_saves.py
