[tool.poetry]
name = "starfield-saver"
version = "1.0.0"
description = "Starfield automatic quicksave and backup utility"
authors = ["Danny Stewart <danny@stewart.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
natsort = "^8.4.0"
numpy = "^2.1.2"
psutil = "^6.0.0"
pygame = "^2.6.1"
pynput = "^1.7.7"
pywin32 = "^307"
send2trash = "^1.8.0"
termcolor = "^2.4.0"
toml = "^0.10.2"
tzdata = "^2024.2"
watchdog = "^5.0.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C",    # pylint convention
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle errors
    "EM",   # flake8-errmsg
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "FIX",  # flake8-fixme
    "G001", # Logging statement uses str.format
    "G003", # Logging statement uses +
    "G004", # Logging statement uses f-strings
    "G010", # Logging statement uses warn instead of warning
    "G201", # Logging uses exc_info=True instead of .exception
    "G202", # Logging statement has redundant exc_info
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "R",    # pylint refactor
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",   # flake8-todos
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pylint warnings
]
ignore = [
    "ANN101", # Missing type annotation for 'self'
    "ANN102", # Missing type annotation for 'cls'
    "ANN204", # Missing type annotation for __init__
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "B010",   # 'No docstring in module/class/method'
    "COM812", # Trailing comma missing
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D201",   # 'No blank lines allowed before function docstring'
    "D202",   # Blank lines after function definition
    "D203",   # 1 blank line required before class docstring
    "D204",   # 1 blank line required after class docstring
    "D205",   # 1 blank line required between summary line and description
    "D206",   # Docstring should be indented with spaces not tabs
    "D212",   # Multi-line docstring summary style
    "D400",   # First line should end with a period
    "D406",   # Section name should end with a newline
    "D407",   # Missing dashed underline after section
    "D413",   # Missing blank line after last section
    "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
    "E261",   # At least two spaces before inline comment (formatter fixes this)
    "E303",   # Too many blank lines (formatter fixes this)
    "E501",   # Line too long
    "RET502", # Do not implicitly `return None` in function able to return non-`None` value
    "RET503", # Missing explicit return at the end of function able to return non-None value
    "SIM102", # Use a single if statement instead of nested if statements (Sourcery)
    "TD001",  # Invalid TODO format
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on the line following this TODO
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
