[project]
name = "starfield-saver"
version = "0.1.0"
description = "Starfield automatic quicksave and backup utility"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "natsort (>=8.4.0,<9.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tzdata (>=2025.2,<2026.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pywin32 (>=307,<308) ; sys_platform == 'win32'",
    "polykit (>=0.7.4,<0.8.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
mypy = "^1.15.0"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
